[tool.poetry]
name = "aoa-vis"
version = "0.1.0"
description = "Angle of arrival visualisation."
authors = ["Sam Dudley <dudley.co.uk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
aoa-vis = 'aoa_vis.gui:main'
